Minor bugfix points of interest

--- a/points_of_interest.ipynb
+++ b/points_of_interest.ipynb
@@ -215,7 +215,7 @@
     "dfpivot.columns = dfpivot.columns.droplevel()\n",
     "dfpivot.index.names = [\"name\"]\n",
     "parking_counts = dfpivot.sum(axis=1)\n",
-    "parking_counts = parking_counts.to_frame(\"No. parking spots"
+    "parking_counts = parking_counts.to_frame(\"No. parking spots\")"
    ]
   },
   {
@@ -241,6 +241,14 @@
    "source": [
     "poi_lor_counts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "193be9b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
