Func accepts different aggregations now

--- a/func_poi.ipynb
+++ b/func_poi.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27284f88",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6d92e68f",
    "metadata": {},
    "outputs": [],
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dab01ac9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_parking_spots(poi_lor, est_parking_spots, buffer_size=20):\n",
+    "def calc_parking_spots(poi_lor, est_parking_spots, agg_func=\"len\", buffer_size=20):\n",
     "    # Load data\n",
     "    try:\n",
     "        est_parking_spots = gpd.read_file(est_parking_spots)\n",
@@ -79,7 +79,20 @@
     "    \n",
     "    # Calculate parking spots\n",
     "    intersect_parking[\"capacity\"] = intersect_parking[\"capacity\"].apply(int)\n",
-    "    dfpivot = pd.pivot_table(intersect_parking, index=\"name_left\", columns=\"capacity\", aggfunc={\"capacity\":len})\n",
+    "    if agg_func == \"len\":\n",
+    "        dfpivot = pd.pivot_table(\n",
+    "            intersect_parking,\n",
+    "            index=\"name_left\",\n",
+    "            columns=\"capacity\",\n",
+    "            aggfunc={\"capacity\": len},\n",
+    "        )\n",
+    "    else:\n",
+    "        dfpivot = pd.pivot_table(\n",
+    "            intersect_parking,\n",
+    "            index=\"name_left\",\n",
+    "            columns=\"capacity\",\n",
+    "            aggfunc={\"capacity\": np.sum},\n",
+    "        )\n",
     "    dfpivot.columns = dfpivot.columns.droplevel()\n",
     "    dfpivot.index.names = [\"name\"]\n",
     "    parking_counts = dfpivot.sum(axis=1)\n",
@@ -94,10 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8d7dda35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Michl\\anaconda3\\envs\\datathon\\lib\\site-packages\\geopandas\\geodataframe.py:1351: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  super().__setitem__(key, value)\n"
+     ]
+    }
+   ],
    "source": [
     "# Usage:\n",
     "poi_lor = get_osm_data(\n",
@@ -108,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d3b88163",
    "metadata": {},
    "outputs": [],
@@ -116,16 +142,307 @@
     "parking_counts = calc_parking_spots(\n",
     "    poi_lor,\n",
     "    r\"C:\\Users\\Michl\\Documents\\GitHub\\data-ambassadors-parking-project\\data\\datathon\"+\"/parking/estimated_parking_spots_kfz.geojson\",\n",
-    "    40,\n",
+    "    \"sum\",\n",
     "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "91c882b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amenity</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>name</th>\n",
+       "      <th>index_right</th>\n",
+       "      <th>PLR_ID</th>\n",
+       "      <th>PLR_NAME</th>\n",
+       "      <th>BZR_ID</th>\n",
+       "      <th>BZR_NAME</th>\n",
+       "      <th>PGR_ID</th>\n",
+       "      <th>PGR_NAME</th>\n",
+       "      <th>BEZ</th>\n",
+       "      <th>FINHALT</th>\n",
+       "      <th>STAND</th>\n",
+       "      <th>No. parking spots</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (390959.231 5816831.101)</td>\n",
+       "      <td>Tibet Haus</td>\n",
+       "      <td>12</td>\n",
+       "      <td>02200211</td>\n",
+       "      <td>Chamissokiez</td>\n",
+       "      <td>022002</td>\n",
+       "      <td>Tempelhofer Vorstadt</td>\n",
+       "      <td>0220</td>\n",
+       "      <td>Kreuzberg Süd</td>\n",
+       "      <td>02</td>\n",
+       "      <td>977115.397609</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cafe</td>\n",
+       "      <td>POINT (390922.902 5816642.907)</td>\n",
+       "      <td>Barcomi's Café &amp; Kaffeerösterei</td>\n",
+       "      <td>12</td>\n",
+       "      <td>02200211</td>\n",
+       "      <td>Chamissokiez</td>\n",
+       "      <td>022002</td>\n",
+       "      <td>Tempelhofer Vorstadt</td>\n",
+       "      <td>0220</td>\n",
+       "      <td>Kreuzberg Süd</td>\n",
+       "      <td>02</td>\n",
+       "      <td>977115.397609</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (390915.883 5816676.379)</td>\n",
+       "      <td>Pagode</td>\n",
+       "      <td>12</td>\n",
+       "      <td>02200211</td>\n",
+       "      <td>Chamissokiez</td>\n",
+       "      <td>022002</td>\n",
+       "      <td>Tempelhofer Vorstadt</td>\n",
+       "      <td>0220</td>\n",
+       "      <td>Kreuzberg Süd</td>\n",
+       "      <td>02</td>\n",
+       "      <td>977115.397609</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>88.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (391861.508 5816570.217)</td>\n",
+       "      <td>Kinnaree Thai</td>\n",
+       "      <td>12</td>\n",
+       "      <td>02200211</td>\n",
+       "      <td>Chamissokiez</td>\n",
+       "      <td>022002</td>\n",
+       "      <td>Tempelhofer Vorstadt</td>\n",
+       "      <td>0220</td>\n",
+       "      <td>Kreuzberg Süd</td>\n",
+       "      <td>02</td>\n",
+       "      <td>977115.397609</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>109.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (391147.211 5816607.811)</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>12</td>\n",
+       "      <td>02200211</td>\n",
+       "      <td>Chamissokiez</td>\n",
+       "      <td>022002</td>\n",
+       "      <td>Tempelhofer Vorstadt</td>\n",
+       "      <td>0220</td>\n",
+       "      <td>Kreuzberg Süd</td>\n",
+       "      <td>02</td>\n",
+       "      <td>977115.397609</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>342.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1676</th>\n",
+       "      <td>cafe</td>\n",
+       "      <td>POINT (390776.013 5818589.549)</td>\n",
+       "      <td>Malu</td>\n",
+       "      <td>33</td>\n",
+       "      <td>02100102</td>\n",
+       "      <td>Mehringplatz</td>\n",
+       "      <td>021001</td>\n",
+       "      <td>Südliche  Friedrichstadt</td>\n",
+       "      <td>0210</td>\n",
+       "      <td>Kreuzberg Nord</td>\n",
+       "      <td>02</td>\n",
+       "      <td>624470.274067</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1677</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (390917.367 5818246.073)</td>\n",
+       "      <td>Café Nullpunkt</td>\n",
+       "      <td>33</td>\n",
+       "      <td>02100102</td>\n",
+       "      <td>Mehringplatz</td>\n",
+       "      <td>021001</td>\n",
+       "      <td>Südliche  Friedrichstadt</td>\n",
+       "      <td>0210</td>\n",
+       "      <td>Kreuzberg Nord</td>\n",
+       "      <td>02</td>\n",
+       "      <td>624470.274067</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1678</th>\n",
+       "      <td>restaurant</td>\n",
+       "      <td>POINT (390840.183 5818715.297)</td>\n",
+       "      <td>Babami</td>\n",
+       "      <td>33</td>\n",
+       "      <td>02100102</td>\n",
+       "      <td>Mehringplatz</td>\n",
+       "      <td>021001</td>\n",
+       "      <td>Südliche  Friedrichstadt</td>\n",
+       "      <td>0210</td>\n",
+       "      <td>Kreuzberg Nord</td>\n",
+       "      <td>02</td>\n",
+       "      <td>624470.274067</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1679</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>POINT (390932.194 5818487.246)</td>\n",
+       "      <td>John &amp; Tommy's</td>\n",
+       "      <td>33</td>\n",
+       "      <td>02100102</td>\n",
+       "      <td>Mehringplatz</td>\n",
+       "      <td>021001</td>\n",
+       "      <td>Südliche  Friedrichstadt</td>\n",
+       "      <td>0210</td>\n",
+       "      <td>Kreuzberg Nord</td>\n",
+       "      <td>02</td>\n",
+       "      <td>624470.274067</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1680</th>\n",
+       "      <td>fast_food</td>\n",
+       "      <td>POINT (390762.062 5818476.670)</td>\n",
+       "      <td>Fresh Mesh</td>\n",
+       "      <td>33</td>\n",
+       "      <td>02100102</td>\n",
+       "      <td>Mehringplatz</td>\n",
+       "      <td>021001</td>\n",
+       "      <td>Südliche  Friedrichstadt</td>\n",
+       "      <td>0210</td>\n",
+       "      <td>Kreuzberg Nord</td>\n",
+       "      <td>02</td>\n",
+       "      <td>624470.274067</td>\n",
+       "      <td>01.01.2021</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1681 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         amenity                        geometry  \\\n",
+       "0     restaurant  POINT (390959.231 5816831.101)   \n",
+       "1           cafe  POINT (390922.902 5816642.907)   \n",
+       "2     restaurant  POINT (390915.883 5816676.379)   \n",
+       "3     restaurant  POINT (391861.508 5816570.217)   \n",
+       "4     restaurant  POINT (391147.211 5816607.811)   \n",
+       "...          ...                             ...   \n",
+       "1676        cafe  POINT (390776.013 5818589.549)   \n",
+       "1677  restaurant  POINT (390917.367 5818246.073)   \n",
+       "1678  restaurant  POINT (390840.183 5818715.297)   \n",
+       "1679         bar  POINT (390932.194 5818487.246)   \n",
+       "1680   fast_food  POINT (390762.062 5818476.670)   \n",
+       "\n",
+       "                                 name  index_right    PLR_ID      PLR_NAME  \\\n",
+       "0                          Tibet Haus           12  02200211  Chamissokiez   \n",
+       "1     Barcomi's Café & Kaffeerösterei           12  02200211  Chamissokiez   \n",
+       "2                              Pagode           12  02200211  Chamissokiez   \n",
+       "3                       Kinnaree Thai           12  02200211  Chamissokiez   \n",
+       "4                             Austria           12  02200211  Chamissokiez   \n",
+       "...                               ...          ...       ...           ...   \n",
+       "1676                             Malu           33  02100102  Mehringplatz   \n",
+       "1677                   Café Nullpunkt           33  02100102  Mehringplatz   \n",
+       "1678                           Babami           33  02100102  Mehringplatz   \n",
+       "1679                   John & Tommy's           33  02100102  Mehringplatz   \n",
+       "1680                       Fresh Mesh           33  02100102  Mehringplatz   \n",
+       "\n",
+       "      BZR_ID                  BZR_NAME PGR_ID        PGR_NAME BEZ  \\\n",
+       "0     022002      Tempelhofer Vorstadt   0220   Kreuzberg Süd  02   \n",
+       "1     022002      Tempelhofer Vorstadt   0220   Kreuzberg Süd  02   \n",
+       "2     022002      Tempelhofer Vorstadt   0220   Kreuzberg Süd  02   \n",
+       "3     022002      Tempelhofer Vorstadt   0220   Kreuzberg Süd  02   \n",
+       "4     022002      Tempelhofer Vorstadt   0220   Kreuzberg Süd  02   \n",
+       "...      ...                       ...    ...             ...  ..   \n",
+       "1676  021001  Südliche  Friedrichstadt   0210  Kreuzberg Nord  02   \n",
+       "1677  021001  Südliche  Friedrichstadt   0210  Kreuzberg Nord  02   \n",
+       "1678  021001  Südliche  Friedrichstadt   0210  Kreuzberg Nord  02   \n",
+       "1679  021001  Südliche  Friedrichstadt   0210  Kreuzberg Nord  02   \n",
+       "1680  021001  Südliche  Friedrichstadt   0210  Kreuzberg Nord  02   \n",
+       "\n",
+       "            FINHALT       STAND  No. parking spots  \n",
+       "0     977115.397609  01.01.2021              133.0  \n",
+       "1     977115.397609  01.01.2021                6.0  \n",
+       "2     977115.397609  01.01.2021               88.0  \n",
+       "3     977115.397609  01.01.2021              109.0  \n",
+       "4     977115.397609  01.01.2021              342.0  \n",
+       "...             ...         ...                ...  \n",
+       "1676  624470.274067  01.01.2021               26.0  \n",
+       "1677  624470.274067  01.01.2021               48.0  \n",
+       "1678  624470.274067  01.01.2021                0.0  \n",
+       "1679  624470.274067  01.01.2021                0.0  \n",
+       "1680  624470.274067  01.01.2021               10.0  \n",
+       "\n",
+       "[1681 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Df with Parking lot counts\n",
     "parking_counts[0]\n",
